# tty-text

./: .gitignore  Cargo.toml  README.md
examples/: multi-line.rs  single-line.rs
src/: key.rs  layout.rs  lib.rs  position.rs  result.rs  text.rs
