[package]
description = "Provides agnostic text editing state management."
authors = ["Daniel Way <contact@danieldway.com>"]
name = "tty-text"
version = "2.0.0-beta.2"
license = "MIT"
edition = "2021"
repository = "https://github.com/danielway/tty-text"
exclude = [".github"]

[dependencies]
unicode-segmentation = "1.9.0"

[dev-dependencies]
crossterm = "0.25.0"
